# Temporal-Python-SDK

./: README.md  main.py  pyproject.toml
Tutorial/failing_activity_tutorial/: activity.py  client.py  worker.py  workflow.py
Tutorial/learn_temporal_tutorial/activities/: greet.py
Tutorial/learn_temporal_tutorial/starters/: first_starter.py
Tutorial/learn_temporal_tutorial/workers/: first_worker.py
temporal-python-learning/: .env.example  README.md  requirements.txt
temporal-python-learning/docs/: 01_temporal_overview.md  02_temporal_architecture.md  03_workflows.md  04_activities.md  05_workers.md  06_task_queues.md  07_temporal_cli.md  08_temporal_web_ui.md  09_activity_retry_policy.md  10_async_vs_sync_activities.md  11_temporal_deployment.md  12_temporal_integration_with_apps.md  13_durable_execution.md  14_temporal_logging.md  15_workflow_timers.md  16_temporal_testing.md  17_time_skipping.md  18_mocking_activities.md  19_debugging_workflows.md  20_temporal_best_practices.md
temporal-python-learning/exercises/: exercise_01_hello_workflow.py  exercise_02_web_ui_observation.py  exercise_03_farewell_workflow.py  exercise_04_finale_workflow.py  exercise_05_durable_execution.py  exercise_06_testing_workflow.py  exercise_07_debug_activity.py
temporal-python-learning/notebooks/: 01_temporal_intro.ipynb  02_workflows_and_activities.ipynb  03_retry_policies.ipynb  04_durable_execution.ipynb  05_testing_workflows.ipynb  06_debugging_with_event_history.ipynb
temporal-python-learning/utils/: activity_helpers.py  temporal_client.py  workflow_helpers.py
(+18 files in other folders)
